Fix layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ small, .font_small {font-size: 0.8em;}
   background: #fafafa;
   /* max-width: 1120px; */
   margin: 0 auto;
-  padding: 1.5em;
+  padding: 1.1em;
 }
 
 .container h1 {
@@ -70,13 +70,13 @@ small, .font_small {font-size: 0.8em;}
   border: 1px solid #ccc;
   border-radius: 10px;
   margin: 1%;
-  padding: 1.5em;
+  padding: 1em;
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   transition: box-shadow 0.3s ease-out;
   cursor: pointer;
-  /* width: 300px; */
+  width: 31%;
   flex: 1 1 290px;
 }
 
@@ -85,12 +85,16 @@ small, .font_small {font-size: 0.8em;}
 }
 
 .card-img img {
-  width: 72px;
-  height: 72px;
+  width: 48px;
+  height: 48px;
   background: #444;
   box-shadow: 0 0 1px rgba(100,100,100,0.5);
   border-radius: 50%;
-  margin-right: calc(20/16 * 1em);
+  margin-right: 1em;
+}
+
+.card-content {
+  font-size: 0.9375em;
 }
 
 .card-content,
@@ -188,17 +192,14 @@ small, .font_small {font-size: 0.8em;}
   height: 100px;
 }
 
+.overlay .card-content {
+  font-size: 1em;
+}
+
 .overlay .card-content,
 .overlay .card-details {
   align-items: center;
 }
-/*
-.overlay .card + .card {
-    transform: translateX(100vw);
-    position: absolute;
-    top: 10%;
-    left: 50%;
-} */
 
 .close-modal {
   position: absolute;
@@ -216,13 +217,17 @@ small, .font_small {font-size: 0.8em;}
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 3em;
+    padding: 2em;
   }
 
   .card {
     flex-wrap: nowrap;
   }
 
+  .card-img img {
+    width: 60px;
+    height: 60px;
+  }
   .overlay .card {
     width: 50%;
   }
@@ -239,6 +244,10 @@ small, .font_small {font-size: 0.8em;}
 @media screen and (min-width: 1024px) {
   .overlay .card {
     width: 33%;
+  }
+  .card-img img {
+    width: 72px;
+    height: 72px;
   }
   .prev {
     left: 23%;
